# controller/user.go
@@ -1,20 +1,32 @@
 package controller
 
 import (
+	"context"
+	"errors"
+	"fmt"
+	"net/http"
+
+	"github.com/gin-contrib/sessions"
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
+	"github.com/yiran15/api-server/base/constant"
 	v1 "github.com/yiran15/api-server/service/v1"
 )
 
 type UserController interface {
-	UserLogin(c *gin.Context)
-	UserLogout(c *gin.Context)
-	UserCreate(c *gin.Context)
-	UserUpdateByAdmin(c *gin.Context)
-	UserUpdateBySelf(c *gin.Context)
-	UserDelete(c *gin.Context)
-	UserQuery(c *gin.Context)
-	UserList(c *gin.Context)
-	UserInfo(c *gin.Context)
+	UserLoginController(c *gin.Context)
+	UserLogoutController(c *gin.Context)
+	UserCreateController(c *gin.Context)
+	UserUpdateByAdminController(c *gin.Context)
+	UserUpdateBySelfController(c *gin.Context)
+	UserDeleteController(c *gin.Context)
+	UserQueryController(c *gin.Context)
+	UserListController(c *gin.Context)
+	UserInfoController(c *gin.Context)
+	OAuth2LoginController(c *gin.Context)
+	OAuth2CallbackController(c *gin.Context)
+	OAuth2ProviderController(c *gin.Context)
+	OAuth2ActivateController(c *gin.Context)
 }
 
 type UserControllerImpl struct {
@@ -27,7 +39,7 @@ func NewUserController(userServicer v1.UserServicer) UserController {
 	}
 }
 
-// UserLogin 用户登录
+// UserLoginController 用户登录
 // @Summary 用户登录
 // @Description 使用邮箱和密码登录，返回用户信息和 Token
 // @Tags 用户管理
@@ -36,11 +48,11 @@ func NewUserController(userServicer v1.UserServicer) UserController {
 // @Param data body apitypes.UserLoginRequest true "登录请求参数"
 // @Success 200 {object} apitypes.Response{data=apitypes.UserLoginResponse} "登录成功"
 // @Router /api/v1/users/login [post]
-func (u *UserControllerImpl) UserLogin(c *gin.Context) {
-	ResponseWithData(c, u.userServicer.Login, bindTypeJson)
+func (receiver *UserControllerImpl) UserLoginController(c *gin.Context) {
+	ResponseWithData(c, receiver.userServicer.Login, bindTypeJson)
 }
 
-// UserLogout 用户注销
+// UserLogoutController 用户注销
 // @Summary 用户注销
 // @Description 用户注销，清空 Token
 // @Tags 用户管理
@@ -48,11 +60,11 @@ func (u *UserControllerImpl) UserLogin(c *gin.Context) {
 // @Produce json
 // @Success 200 {object} apitypes.Response "注销成功"
 // @Router /api/v1/user/logout [post]
-func (u *UserControllerImpl) UserLogout(c *gin.Context) {
-	ResponseNoBind(c, u.userServicer.Logout)
+func (receiver *UserControllerImpl) UserLogoutController(c *gin.Context) {
+	ResponseNoBind(c, receiver.userServicer.Logout)
 }
 
-// UserCreate 用户创建
+// UserCreateController 用户创建
 // @Summary 用户创建
 // @Description 创建用户同时可以设置角色
 // @Tags 用户管理
@@ -61,11 +73,11 @@ func (u *UserControllerImpl) UserLogout(c *gin.Context) {
 // @Param data body apitypes.UserCreateRequest true "创建请求参数"
 // @Success 200 {object} apitypes.Response "创建成功"
 // @Router /api/v1/user/register [post]
-func (u *UserControllerImpl) UserCreate(c *gin.Context) {
-	ResponseOnlySuccess(c, u.userServicer.CreateUser, bindTypeJson)
+func (receiver *UserControllerImpl) UserCreateController(c *gin.Context) {
+	ResponseOnlySuccess(c, receiver.userServicer.CreateUser, bindTypeJson)
 }
 
-// UserUpdateByAdmin 用户更新
+// UserUpdateByAdminController 用户更新
 // @Summary 用户更新
 // @Description 更新用户信息，可以更新角色
 // @Tags 用户管理
@@ -74,11 +86,11 @@ func (u *UserControllerImpl) UserCreate(c *gin.Context) {
 // @Param data body apitypes.UserUpdateAdminRequest true "更新请求参数"
 // @Success 200 {object} apitypes.Response "更新成功"
 // @Router /api/v1/user/:id [put]
-func (u *UserControllerImpl) UserUpdateByAdmin(c *gin.Context) {
-	ResponseOnlySuccess(c, u.userServicer.UpdateUserByAdmin, bindTypeUri, bindTypeJson)
+func (receiver *UserControllerImpl) UserUpdateByAdminController(c *gin.Context) {
+	ResponseOnlySuccess(c, receiver.userServicer.UpdateUserByAdmin, bindTypeUri, bindTypeJson)
 }
 
-// UserUpdateBySelf 用户更新自己的信息
+// UserUpdateBySelfController 用户更新自己的信息
 // @Summary 用户更新自己的信息
 // @Description 更新用户信息，不能更新角色
 // @Tags 用户管理
@@ -87,11 +99,11 @@ func (u *UserControllerImpl) UserUpdateByAdmin(c *gin.Context) {
 // @Param data body apitypes.UserUpdateSelfRequest true "更新请求参数"
 // @Success 200 {object} apitypes.Response "更新成功"
 // @Router /api/v1/user/self [put]
-func (u *UserControllerImpl) UserUpdateBySelf(c *gin.Context) {
-	ResponseOnlySuccess(c, u.userServicer.UpdateUserBySelf, bindTypeJson)
+func (receiver *UserControllerImpl) UserUpdateBySelfController(c *gin.Context) {
+	ResponseOnlySuccess(c, receiver.userServicer.UpdateUserBySelf, bindTypeJson)
 }
 
-// UserDelete 用户删除
+// UserDeleteController 用户删除
 // @Summary 用户删除
 // @Description 删除用户，只能管理员删除
 // @Tags 用户管理
@@ -100,11 +112,11 @@ func (u *UserControllerImpl) UserUpdateBySelf(c *gin.Context) {
 // @Param data body apitypes.IDRequest true "删除请求参数"
 // @Success 200 {object} apitypes.Response "删除成功"
 // @Router /api/v1/user/:id [delete]
-func (u *UserControllerImpl) UserDelete(c *gin.Context) {
-	ResponseOnlySuccess(c, u.userServicer.DeleteUser, bindTypeUri)
+func (receiver *UserControllerImpl) UserDeleteController(c *gin.Context) {
+	ResponseOnlySuccess(c, receiver.userServicer.DeleteUser, bindTypeUri)
 }
 
-// UserQuery 用户查询
+// UserQueryController 用户查询
 // @Summary 用户查询
 // @Description 使用 id 查询用户的信息和用户的角色
 // @Tags 用户管理
@@ -113,11 +125,11 @@ func (u *UserControllerImpl) UserDelete(c *gin.Context) {
 // @Param data body apitypes.IDRequest true "查询请求参数"
 // @Success 200 {object} apitypes.Response{data=model.User} "查询成功"
 // @Router /api/v1/user/:id [get]
-func (u *UserControllerImpl) UserQuery(c *gin.Context) {
-	ResponseWithData(c, u.userServicer.QueryUser, bindTypeUri)
+func (receiver *UserControllerImpl) UserQueryController(c *gin.Context) {
+	ResponseWithData(c, receiver.userServicer.QueryUser, bindTypeUri)
 }
 
-// UserInfo 用户获取自己的信息
+// UserInfoController 用户获取自己的信息
 // @Summary 用户获取自己的信息
 // @Description 使用 id 查询用户的信息和用户的角色
 // @Tags 用户管理
@@ -125,11 +137,11 @@ func (u *UserControllerImpl) UserQuery(c *gin.Context) {
 // @Produce json
 // @Success 200 {object} apitypes.Response{data=model.User} "查询成功"
 // @Router /api/v1/user/info [get]
-func (u *UserControllerImpl) UserInfo(c *gin.Context) {
-	ResponseWithDataNoBind(c, u.userServicer.Info)
+func (receiver *UserControllerImpl) UserInfoController(c *gin.Context) {
+	ResponseWithDataNoBind(c, receiver.userServicer.Info)
 }
 
-// UserList 用户列表
+// UserListController 用户列表
 // @Summary 用户列表
 // @Description 使用分页查询用户的信息, 支持根据 name, email, mobile, department 查询
 // @Tags 用户管理
@@ -138,6 +150,98 @@ func (u *UserControllerImpl) UserInfo(c *gin.Context) {
 // @Param data query apitypes.UserListRequest true "查询请求参数"
 // @Success 200 {object} apitypes.Response{data=apitypes.UserListResponse} "登录成功"
 // @Router /api/v1/user/ [get]
-func (u *UserControllerImpl) UserList(c *gin.Context) {
-	ResponseWithData(c, u.userServicer.ListUser, bindTypeQuery)
+func (receiver *UserControllerImpl) UserListController(c *gin.Context) {
+	ResponseWithData(c, receiver.userServicer.ListUser, bindTypeQuery)
+}
+
+// OAuth2LoginController OAuth 登录
+// @Summary OAuth 登录
+// @Description 使用 OAuth 登录，返回用户信息和 Token
+// @Tags 用户管理
+// @Accept json
+// @Produce json
+// @Success 302 {string} string "重定向到 OAuth 登录页面"
+// @Router /api/v1/oauth2/login [get]
+func (receiver *UserControllerImpl) OAuth2LoginController(c *gin.Context) {
+	session := sessions.Default(c)
+	state := uuid.New().String()
+	session.Set("state", state)
+	provider := c.Query("provider")
+	if provider != "" {
+		session.Set("provider", provider)
+	}
+
+	if err := session.Save(); err != nil {
+		responseError(c, fmt.Errorf("save session failed: %w", err))
+		return
+	}
+	url, err := receiver.userServicer.OAuth2Login(provider, state)
+	if err != nil {
+		responseError(c, err)
+		return
+	}
+	c.Redirect(http.StatusFound, url)
+}
+
+// OAuth2CallbackController OAuth 回调
+// @Summary OAuth 回调
+// @Description 使用 OAuth 回调，返回用户信息和 Token
+// @Tags 用户管理
+// @Accept json
+// @Produce json
+// @Param data query apitypes.OAuthLoginRequest true "回调请求参数"
+// @Success 200 {object} apitypes.Response{data=apitypes.UserLoginResponse} "登录成功"
+// @Router /api/v1/oauth2/callback [get]
+func (receiver *UserControllerImpl) OAuth2CallbackController(c *gin.Context) {
+	session := sessions.Default(c)
+	stateSession := session.Get("state")
+	providerSession := session.Get("provider")
+	state := c.Query("state")
+	if state == "" {
+		responseError(c, errors.New("state is empty"))
+		return
+	}
+	if state != stateSession {
+		responseError(c, errors.New("state invalid"))
+		return
+	}
+	ctx := context.WithValue(c.Request.Context(), constant.ProviderContextKey, providerSession)
+	c.Request = c.Request.WithContext(ctx)
+	ResponseWithData(c, receiver.userServicer.OAuth2Callback, bindTypeQuery)
+}
+
+// OAuth2ProviderController OAuth2 提供商列表
+// @Summary OAuth2 提供商列表
+// @Description 获取 OAuth2 提供商列表
+// @Tags 用户管理
+// @Accept json
+// @Produce json
+// @Success 200 {object} apitypes.Response{data=[]string} "获取成功"
+// @Router /api/v1/oauth2/provider [get]
+func (receiver *UserControllerImpl) OAuth2ProviderController(c *gin.Context) {
+	ResponseWithDataNoBind(c, receiver.userServicer.OAuth2Provider)
+}
+
+// OAuth2ActivateController OAuth2 激活
+// @Summary OAuth2 激活
+// @Description 使用 OAuth2 激活，返回用户信息和 Token
+// @Tags 用户管理
+// @Accept json
+// @Produce json
+// @Param data body apitypes.OAuthActivateRequest true "激活请求参数"
+// @Success 200 {object} apitypes.Response{data=apitypes.UserLoginResponse} "激活成功"
+// @Router /api/v1/oauth2/:id [post]
+func (receiver *UserControllerImpl) OAuth2ActivateController(c *gin.Context) {
+	session := sessions.Default(c)
+	stateSession := session.Get("state")
+	state := c.Query("state")
+	if state == "" {
+		responseError(c, errors.New("state is empty"))
+		return
+	}
+	if state != stateSession {
+		responseError(c, errors.New("state invalid"))
+		return
+	}
+	ResponseWithData(c, receiver.userServicer.OAuth2Activate, bindTypeUri, bindTypeJson)
 }
